@@ -58,14 +58,14 @@ L["Show Dead Only"]             = "仅显示死者"
 L["Watch Units"]                = "监视的单体"
 L["Group"]                      = "分组配置"
 L["Group By"]                   = "分组基准"
-L["None"]                       = "无"
-L["Group"]                      = "小组"
-L["Class"]                      = "职业"
-L["Role"]                       = "职责"
-L["Assignedrole"]               = "分配的角色"
+L["NONE"]                       = "无"
+L["GROUP"]                      = "小组"
+L["CLASS"]                      = "职业"
+L["ROLE"]                       = "职责"
+L["ASSIGNEDROLE"]               = "分配的角色"
 L["Sort By"]                    = "排序基准"
-L["Index"]                      = "索引"
-L["Name"]                       = "名字"
+L["INDEX"]                      = "索引"
+L["NAME"]                       = "名字"
 L["Group Filter & Order"]       = "小组过滤 & 显示顺序"
 L["Class Filter & Order"]       = "职业过滤 & 显示顺序"
 L["Role Filter & Order"]        = "职责过滤 & 显示顺序"
@@ -80,3 +80,7 @@ L["Do you want delete the macro condition"] = "是否删除该自动隐藏宏条
 L["All Check"]                  = "全选择"
 L["All Clear"]                  = "全取消"
 L["Do you want copy the current panel?"] = "是否复制当前面板?"
+
+L["Group Settings"] 			= "分组设置"
+L["Current"] 					= "当前值"
+L["Options"] 					= "备选项"
